--- a/nothing.html
+++ b/nothing.html
@@ -1,8 +1,10 @@
 <h1>Shakil made it for h1</h1>
 
-<p>Hi shakil</p>
+<p>Hi shakil</p>c
 
     changes from ubuntu
     anoother change made and push form ubutntu bash terminal
 </h2>
 <p>changing </p>
+
+<p>Lorem ipsum dolor sit amet.</p>
